# asterisell-v5

./: .gitignore  AUTHORS  CHANGELOG.md  COPYRIGHT  Dockerfile  README.md  VERSION  VERSION-NR  VERSION-TYPE  asterisell.php  asterisell_instances.py  fab.sh  fabfile.py  shell.nix  symfony
config/: ProjectConfiguration.class.php  databases.yml  propel.ini  schema.yml
customizations/: CUSTOMIZATIONS.md  README
customizations/consertis/import_customers/: Main.hs  README  import.cabal  stack.yaml
data/sql/: lib.model.schema.sql
doc/: update_website.sh
doc/licenses_of_used_products/: LICENSE.password
doc/manual/: README.md  build.sh  manual.ditamap
doc/usage_manual/: FAQ.rst  conf.py  make.bat  management.rst  usage.rst
doc/website/: FAQ.rst  Makefile  README.md  build.sh  conf.py  configuration.rst  development.rst  index.rst  installation.rst  keybase.txt  management.rst  meta_toc.rst  news.rst  news_2015-06-26.rst  news_2015-08-04.rst  news_2015-11-05.rst  news_2016-11-02.rst  news_2016-12-21.rst  news_2017-03-24.rst  news_2017-10-04.rst  news_2017-11-24.rst  pelicanconf.py  support.rst  usage.rst
fabric_data/: README.md  __init__.py  asterisell_instances.py  lib.py  passwords.ini.rename
fabric_data/config_files_templates/: app.yml  databases.yml  server.cnf
fabric_data/ssl_certificates/: README.md
module_templates/: generate.php
rating_tools/rate_engine/: README  RateEngine.cabal  stack-deploy.yaml  stack.yaml
rating_tools/rate_engine/bytestring-trie-0.3.0.4/: CHANGELOG  bytestring-trie.cabal  stack.yaml
rating_tools/rate_engine/bytestring-trie-0.3.0.4/_darcs/: hashed_inventory  index  patch_description.txt  tentative_pristine
rating_tools/rate_engine/bytestring-trie-0.3.0.4/_darcs/inventories/: 0000011023-d53123b04b07588fcaf7b4adb322477370cab6c224196b1f2a39476929e67f48  0000017015-8ac0b9c19d7f4b650966c41e1d43fa8a3e5a95f8b1fe67c479149329a1a1daa1
rating_tools/rate_engine/bytestring-trie-0.3.0.4/_darcs/patches/: 0000000187-c70ed9016b8eaff497adbe396100e4c56b99f5b04cf1cb0f8b3eaac422a28fab  0000000201-8493548674588062bb51b12a77bd211175f39f6d8961d21a1c0bed19d02aead4  0000000205-a365f9b8128f40f231d5a0b60316261d37df95d660de1dd5c2069e61b113cf6d  0000000211-b3be250fae1840513268f48f325bb45bc3139faf9c57861d600e431ce7ecc4f6  0000000212-b8d6a337adcbdba8615f8c8a9ca00d558c2e84cea32a91a81b8d3fe5c20fb19c  0000000311-701c9f349ca217f1b0dd8f33440bc287b7bc3164de7a3e189e47dd036eb48afa  0000000320-f471b394f75c26aa31b6b106f66f35c63b012329a922f320381088fda728ce06  0000000385-09083f49478ca01b59fa624525efe6ca6ecc5209212fa799ac2a0b1f7e896ca9  0000000385-2f9f6a2d01a91e734f23268d446ca6b11ad1d9d8be42e16e95d24ef42ddc10f3  0000000411-033518cd13022227814c0f69b7a17af88fc24eff2235d1c742af86ec7ed19897  0000000425-3b3cc3d30ae95d9bcbe00d52e0afa0fb264f375f97a808a17b699206a794defe  0000000440-92c81bba52935bbb429d3254cc41176d03db4a0fc53136dd9416b6f3ecd93fff  0000000446-200b6276df7d3cfd95e1014503ef62f14a9b9b4d62c8ea2c555c63a23fd090f1  0000000493-1b0575c72faf166c3c8d1074ad5052fed67ed8f2856415036ea524566efbd449  0000000494-b86220a5fb7d6596f08079fad21d6a71c01268a5ee3446799699f96ad2bd44f8  0000000496-c77013131364e827949591408bdad84b69e26a92fba34d66a480adb97a156c9e  0000000542-dc25f00ab5a3fafcc5aaebff75dd20d98efcb71d00867a1c3b72b01de0f238ac  0000000553-acbfa362387c00fbbfeaf136855adb65ff7fc13f7a0bdc83f185a9c1008501eb  0000000661-18cf97c2a0a68c87efc28c6872ff9d04a4c25425ae7e8a0fda82d78679bf7bca  0000000664-337bdf2105927d3ea5d13e6db029b9f7cf2c1c4345492a13779ba3499cd8ce6c  0000000671-3165281f0b7ac7ed72cce0cb3ac8605f7620f60f7ba633d9ea4a95acba228756  0000000706-b147bcb349319fc1acb094d41328358ffffeb4d42e717d84021ee01ef7b21acf  0000000710-20373a27503c2f2b5c126d295681c889fc3f151923efe032bcb48594b887936a  0000000728-1d381fed3d1c7fed0f34f4d13a5a091b325c4b286da4de08ce1ae1627332abba  0000000738-4265c8f2855e587d97657d32fe78b3c4ca504b65083ff8a1a996a50337c0b2e9  0000000783-62176515445ba46bc48fdff2890508f47f0672532f54702606cbec1cae6c90d9  0000000795-3ade2ccaae4cbe31e6ca83d8206d4833ab5457d796bd2892e82a95b2776d5c23  0000000958-aa341f83dd535ba3ff7a158cccf79019d8f74bfc49a18fc46d6c7e53d564fc6d  0000001015-8342e8c96274cb1546bd0edc8322e10a164b9ba46e29994dc51c591d397a7100  0000001025-fa68d49df4d13d48a8745684c0711dee8419dda8dfc057790d210a5729ae2291  0000001076-4c08a093dba1376ce4c9e0191009bb981100ae321fb780bc244dfa9e2d0241cd  0000001102-56bcd5a5d3f36c5761623691ac31cde1a2b35ba7705a00a5bc0f2d33451b64dd  0000001144-d0b84a001fd301c3afdb4c761a06b1dc7ad12634c3951a8c6b7642dcbb2e6a70  0000001149-9f8f854e90fe6d0a8a3fde0ff509336fc67c2573ebd4c05068b4d5a6ecf2bcca  0000001223-79e73c4aedb307d20049c6383031a4c0f53b547a639c2389fcedb30992e56034  0000001314-9456ab22d00fdaed224d44252fa1d94f2b2d9b92c967214f3839b92d860cd454  0000001399-8a1edabf319ebdfbd1c703941ec87c2ba9b4b56baed9bf532a2ba54ec316889f  0000001465-e12346c19bb06cf0a957c5c5b02d9f7788ce1ab83f7ab8d32a7791b91a1df6df  0000001518-eb7f87b57cb6fed7e7bec9891cb65fd1b0cbe624a698dd2128a367a8f6938bfc  0000001531-a72406f0253416e22e1d26be4f09be5ce912a331f73cff938563f6afa6af49a4  (+82 more)
rating_tools/rate_engine/bytestring-trie-0.3.0.4/_darcs/prefs/: boring  defaultrepo  sources
rating_tools/rate_engine/bytestring-trie-0.3.0.4/src/Data/Trie/ArrayMapped/: Internal.hs
rating_tools/rate_engine/bytestring-trie-0.3.0.4/src/Data/Trie/BigEndianPatricia/: Internal.hs
rating_tools/rate_engine/mysql-haskell/benchmark/select/: MySQLHaskell.hs
rating_tools/rate_engine/src/: Main.hs
rating_tools/rate_engine/src/Asterisell/: ApplyRatePlan.hs  CSVFileRatePlan.hs  CalcSpecificRates.hs  Cdr.hs  CdrsToRate.hs  CustomOrganizationInfoImporters.hs  CustomPortedTelephoneNumbers.hs  CustomerSpecificImporters.hs  CustomerSpecificRates.hs  DB.hs  Error.hs  Holiday.hs  ImportDataFiles.hs  MainRatePlan.hs  OrganizationHierarchy.hs  Params.hs  ParseRatePlan.hs  Process.hs  RateCategories.hs  RateEngine.hs  RatePlan.hs  Services.hs  TelephonePrefixes.hs  Trie.hs  Utils.hs  VoIPChannelAndVendor.hs
scripts/: generate_self_signed_certificate.sh  log_rotate.sh  makedb.sh  reinstall_dev.sql
web/: asterisell_dev.php  index.php
(+1901 files in other folders)
