name: RateEngine
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: GPL
maintainer: massimo.zaniboni@asterisell.com
homepage: http://www.asterisell.com
bug-reports: support@asterisell.com
author: Massimo Zaniboni
data-dir: ""
copyright: Massimo Zaniboni <massimo.zaniboni@asterisell.com>

executable RateEngine
  ghc-options: -O2 -threaded -rtsopts
  build-depends: 
             QuickCheck -any
           , base -any
           , filepath -any 
           , system-filepath -any
           , transformers -any 
           , bytestring -any
           , parsec -any
           , attoparsec -any
           , containers -any
           , data-default -any
           , mtl -any
           , HUnit -any
           , text -any
           , old-time -any
           , old-locale -any
           , time -any
           , MissingH -any
           , lens-family-core -any
           , vector -any
           , cassava -any
           , unordered-containers -any
           , hashable -any
           , heredoc -any
           , cereal -any
           -- TODO see if it is needed
           , cereal-text -any
           , directory -any
           , safe-exceptions -any
           , deepseq -any
           , deepseq-generics -any
           , exceptions -any
           , async -any
           , yaml -any
           , quicklz -any
           , base64-bytestring -any
           , mysql-haskell -any
           , io-streams -any
           , streaming -any
           , streaming-utils -any
           , streaming-bytestring -any
           , BoundedChan -any
           , zlib -any
           , unagi-chan -any
           , parallel -any

  main-is: Main.hs
  buildable: True
  hs-source-dirs: src
  other-modules: Asterisell.Cdr
                 Asterisell.Error
                 Asterisell.RatePlan
                 Asterisell.MainRatePlan
                 Asterisell.RateEngine
                 Asterisell.Utils
                 Asterisell.Trie
                 Asterisell.TelephonePrefixes
                 Asterisell.VoIPChannelAndVendor
                 Asterisell.RateCategories
                 Asterisell.OrganizationHierarchy
                 Asterisell.CustomerSpecificImporters
                 Asterisell.CustomerSpecificRates
                 Asterisell.Process
                 Asterisell.DB
